# seasonal-fracture-toughness

./: .gitignore  ODR.ipynb  README.md  clean-odr.ipynb  pyproject.toml  regression.py
.claude/context/: odr-fitting-context-2025-01-09.md
data/processed/: df_with_fracture_toughness_final_incl_bendingstiffness_final3.pkl
legacy/: df_with_fracture_toughness_final_incl_bendingstiffness_final3.xlsx
notebooks/: clean-odr.ipynb  odr.ipynb  test_odr_fit.ipynb
src/legacy/: multi_dataset_fixed_exponents.py  test_multi_dataset_fixed_exponents.py  visualization.py
src/sft/: __init__.py  data.py  odr_fit.py  prepare.py  regression.py  residuals.py  utils.py  visualization.py
